# listaVisu

./: CMakeLists.txt  define.h  geometry.c  geometry.h  init.c  init.h  lista.c  lista.h  main.c  structs.h  todo.txt  utils.c  utils.h
